Ajuste do texto Conta a REceber >> Conta a Receber no menu.

--- a/perseu_escola/src/main/webapp/comum/menu.xhtml
+++ b/perseu_escola/src/main/webapp/comum/menu.xhtml
@@ -46,7 +46,7 @@
 	</p:submenu>
 	<p:submenu label="Financeiro">
 	
-	<p:menuitem value="Contas a REceber"
+	<p:menuitem value="Contas a Receber"
 			url="#{request.contextPath}/../pages/admin/ContasAReceber.xhtml"></p:menuitem>
 	
 	</p:submenu>
