Correcao do carregamento da tela de Unidade

--- a/perseu_escola/src/main/webapp/pages/admin/endereco.xhtml
+++ b/perseu_escola/src/main/webapp/pages/admin/endereco.xhtml
@@ -32,7 +32,7 @@
 								<h:outputLabel value="UF: "
 									style="font-weight:bold; padding-right: 5px; float: right;" />
 								<p:inputText size="5"
-									value="#{enderecoController.endereco.cidade.uf.descricao}" />
+									value="#{enderecoController.endereco.estado}" />
 
 								<h:outputLabel value="Logradouro: "
 									style="font-weight:bold; padding-right: 5px; float: right;" />
@@ -42,7 +42,7 @@
 								<h:outputLabel value="Cidade: "
 									style="font-weight:bold; padding-right: 5px; float: right;" />
 								<p:inputText size="50"
-									value="#{enderecoController.endereco.cidade.descricao}" />
+									value="#{enderecoController.endereco.cidade}" />
 
 								<h:outputLabel value="Bairro: "
 									style="font-weight:bold; padding-right: 5px; float: right;" />
