Fazendo tratamento das regras de negócios, feito no ClienteService, para que o campo do contado do adicionar novo cliente, seja obrigatório.

--- a/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
+++ b/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
@@ -116,7 +116,7 @@
 
 								<p:commandButton
 									action="#{matriculaController.adicionarCliente}"
-									value="Adicionar" process="panelCliente" update="@form">
+									value="Adicionar" process="panelCliente" update="tblCliente">
 								</p:commandButton>
 
 							</h:panelGrid>
