Coloquei o botão de imprimir no fim da visualização do imprimir contrato em matricula.xhtml.

--- a/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
+++ b/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
@@ -755,6 +755,12 @@
 						</div>
 
 					</p:panel>
+
+					<h:commandButton value="Imprimir" type="button"
+						icon="ui-icon-print">
+						<p:printer target="textoContrato" />
+					</h:commandButton>
+					
 				</p:dialog>
 
 				<h:commandButton value="Imprimir" type="button" icon="ui-icon-print">
