Correcao Para evitar erros de $$EnhancerBySpringCGLIB e também para rodar a matricula

--- a/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
+++ b/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
@@ -70,7 +70,7 @@
 
 								<p:commandButton value="Salvar 4"
 							action="#{matriculaController.salvar}"
-							process="formMat:tvMatricula:panelContrato" update="tab1" />
+							process=":formMat:tvMatricula:panelContrato" update="tab1" />
 							
 							</h:panelGrid>
 							
