Update da branch master

--- a/perseu_escola/src/main/webapp/resources/perseucomponentes/BuscaClienteComp.xhtml
+++ b/perseu_escola/src/main/webapp/resources/perseucomponentes/BuscaClienteComp.xhtml
@@ -22,7 +22,7 @@
 									converter="#{clienteConverter}"
 									completeMethod="#{clienteController.obterClientes}" var="c"
 									itemLabel="#{c.nome}" itemValue="#{c}" forceSelection="true"
-									dropdown="true" required="true" scrollHeight="200" requiredMessage="Selecione pelo menos um cliente">
+									dropdown="true"  scrollHeight="200" >
 								</p:autoComplete>
 </composite:implementation>
 </body>
