Atualizando branch master

--- a/perseu_escola/src/main/webapp/comum/menu.xhtml
+++ b/perseu_escola/src/main/webapp/comum/menu.xhtml
@@ -43,6 +43,8 @@
 	<p:submenu label="Matrícula">
 		<p:menuitem value="Nova"
 			url="#{request.contextPath}/../pages/admin/matricula.xhtml"></p:menuitem>
+			<p:menuitem value="Consultar"
+			url="#{request.contextPath}/../pages/admin/consultamatricula.xhtml"></p:menuitem>
 	</p:submenu>
 	<p:submenu label="Financeiro">
 	
