>Validando, ao cadastrar uma nova matrícula, se há, pelo menos, um cliente consumidor. >Mudando o texto do botão salvar da matrícula de "Salvar 10" para "Salvar"

--- a/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
+++ b/perseu_escola/src/main/webapp/pages/admin/matricula.xhtml
@@ -432,7 +432,7 @@
 					</h:panelGrid>
 				</p:panel>
 
-				<p:commandButton value="Salvar 10"
+				<p:commandButton value="Salvar"
 					actionListener="#{matriculaController.salvar}"
 					process="@this panelContrato" update="@form" />
 
